Added circle tooltip to provide Cases value on hover

--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,9 @@
     stroke: steelblue;
     stroke-width: 1.5px;
   }
+/* TOOLTIP */
+.tooltip {
+    fill: #2b2929;
+    font-family: sans-serif;
+    font-size: 75%;
+    }
